FIX: change the button font size on mobile

--- a/code/assets/CSS/login.css
+++ b/code/assets/CSS/login.css
@@ -142,8 +142,4 @@ p {
   #loginInput {
     font-size: 14px;
   }
-
-  .btn {
-    font-size: 14px;
-  }
 }
